# AGA8

./: .travis.yml
.github/workflows/: rust.yml
AGA8CODE/FORTRAN/: CMakeLists.txt  DETAIL.FOR  DETAILTEST.FOR  GERG2008.FOR  GERGTEST.FOR  GROSS.FOR  GROSSTEST.FOR
AGA8CODE/RUST/examples/: gerg_demo.rs
AGA8CODE/RUST/src/: gerg2008.rs  lib.rs
AGA8CODE/RUST/tests/: gerg-tests.rs  integration-tests.rs
